--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -23,10 +23,34 @@ body{
 }
 
 .logo{
+    position: relative;
     font-size: 25px;
     color: #ededed;
     text-decoration: none;
     font-weight: 600;
+}
+
+.logo::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #081b29;
+    animation: ShowRight 1s ease forwards;
+    animation-delay: .3s;
+}
+
+.home.content h1::before{
+    content:'';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    animation: showRight 1s ease forwards;
+    animation-delay: .1s;
 }
 
 .navbar a{
@@ -38,13 +62,15 @@ body{
     transition: .3s;
 }
 
-.navbar a:hover,
-.navbar a.active{
+.navbar a:hover,.navbar a.active{
     color: #00abfe;
 }
 
 .home{
     height: 100vh;
+    background:  yellowgreen no-repeat;
+    background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     padding: 0 10%;
@@ -54,29 +80,78 @@ body{
     max-width: 800px;
 }
 .home-content h1{
+    position: relative;
     font-size: 50px;
     font-weight: 800;
     line-height: 1.5s;
 }
+
+.home-content h1::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #081b29;
+    animation: ShowRight 1s ease forwards;
+    animation-delay: .6s;
+}
 .home-content h3{
+    position: relative;
     font-size: 30px;
     font-weight: 700;
     color: #00abfe;
 }
-
+.home-content h3::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #081b29;
+    animation: ShowRight 1s ease forwards;
+    animation-delay: 1.3s;
+}
 .home-content pre{
+    position: relative;
     font-size: 16px;
     width: 100%;
     margin: 10px 0 20px;
     letter-spacing: 1px;
   
 }
+.home-content pre::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #081b29;
+    animation: ShowRight 1s ease forwards;
+    animation-delay: 1.6s;
+}
 
 .home-content .btn-box{
+    position: relative;
     display: flex;
     justify-content: space-between;
     width: 345px;
     height: 80px;
+}
+.home-content .btn-box::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #081b29;
+    animation: ShowRight 1s ease forwards;
+    animation-delay: 1.8s;
+    z-index: 2;
 }
 
 .btn-box a{
@@ -138,7 +213,18 @@ body{
     display: flex;
     justify-content: space-between;
 }
-
+.home-sci::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #081b29;
+    animation: ShowRight 1s ease forwards;
+    animation-delay: 2.5s;
+    z-index: 2;
+    }
 .home-sci a{
     position: relative;
     display: inline-flex;
@@ -175,4 +261,35 @@ body{
 
 .home-sci a:hover::before{
     width: 100%;
+}
+.home-imghover{
+    position: absolute;
+    top: 0;
+    right: 30px;
+    width: 500px;
+    height: 100%;
+    background: transparent;
+    transition: .3s;
+}
+
+.home-imghover:hover{
+    background: #081b29;
+    opacity: .6;
+}
+.home-imghover::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 150%;
+    height: 100%;
+    background: #081b29;
+    animation: ShowRight 1s ease forwards;
+    animation-delay: 2.8s;
+    z-index: 100;
+    }
+@keyframes ShowRight{
+    100%{
+        width: 0;
+    }
 }
