--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -21,7 +21,6 @@ body{
     align-items: center;
     z-index: 100;
 }
-
 .logo{
     position: relative;
     font-size: 25px;
@@ -29,7 +28,6 @@ body{
     text-decoration: none;
     font-weight: 600;
 }
-
 .logo::before{
     content: '';
     position: absolute;
@@ -41,7 +39,6 @@ body{
     animation: ShowRight 1s ease forwards;
     animation-delay: .3s;
 }
-
 .home.content h1::before{
     content:'';
     position: absolute;
@@ -52,7 +49,6 @@ body{
     animation: showRight 1s ease forwards;
     animation-delay: .1s;
 }
-
 .navbar a{
     font-size: 25px;
     color: #ededed;
@@ -61,21 +57,18 @@ body{
     margin-left: 35px;
     transition: .3s;
 }
-
 .navbar a:hover,.navbar a.active{
     color: #00abfe;
 }
-
 .home{
     height: 100vh;
-    background:  yellowgreen no-repeat;
+    background:  #081b29 no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
     align-items: center;
     padding: 0 10%;
 }
-
 .home-content{
     max-width: 800px;
 }
@@ -85,7 +78,6 @@ body{
     font-weight: 800;
     line-height: 1.5s;
 }
-
 .home-content h1::before{
     content: '';
     position: absolute;
@@ -292,4 +284,32 @@ body{
     100%{
         width: 0;
     }
+}
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+    background: #081b29;
+    padding-bottom: 6rem;
+}
+.heading{
+    font-size: 5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+.about-img{
+    position: relative;
+    width: 23rem;
+    height: 25rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about-img img{
+    width: 90%;
+    border-radius: 50%;
+    border: 0.5rem solid #ededed ;
 }
