--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -62,7 +62,7 @@ body{
 }
 .home{
     height: 100vh;
-    background:  #081b29 no-repeat;
+    background:  url("rosh final.png") no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
@@ -299,6 +299,9 @@ body{
     margin-bottom: 3rem;
     text-align: center;
 }
+span{
+    color: #00abf0;
+}
 .about-img{
     position: relative;
     width: 23rem;
@@ -311,5 +314,108 @@ body{
 .about-img img{
     width: 90%;
     border-radius: 50%;
-    border: 0.5rem solid #ededed ;
+    border: .2rem solid #00abf0 ;
+}
+.about-img.circle-spin{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(0);
+    width: 100%;
+    border-radius: 50%;
+    border-top: .2rem solid #081b29;
+    border-bottom: .2rem solid #081b29;
+    border-left: .2rem solid #00abf0;
+    border-right: .2rem solid #00abf0;
+}
+.about-content{
+    text-align: center;
+}
+.about-content h3{
+    font-size: 2.6rem;
+}
+.about-content p{
+    font-size: 1.6rem;
+    margin: 2rem 0 3rem;
+}
+.btn-box btns{
+    display: inline-block;
+    width: 15rem;
+}
+.btn-box btns a{
+    background: #00abf0;
+}
+.education{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: auto;
+    padding-bottom: 5rem;
+}
+.education .education-row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;   
+}
+.education-row .education-column{
+    flex: 1 1 40rem;
+}
+.education-column .title{
+    font-size: 2.5rem;
+    margin: 0 0 1.5rem 2rem;
+}
+.education-column .education-box{
+    border-left: .2rem solid #00abf0;
+}
+.education-box .education-content{
+    position: relative;
+    padding-left: .2rem;
+}
+
+.education-box .education-content::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -1.1rem;
+    width: 2rem;
+    height: 2rem;
+    background: #00abf0;
+    border-radius: 50%;
+}
+.education-content .content{
+    position: relative;
+    padding: 1.5rem;
+    border: .2rem solid #00abf0;
+    border-radius: .6rem;
+    border-bottom: 2rem;
+    overflow: hidden;
+}
+.education-content .content::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background: #194666;
+    z-index: -1;
+}
+.education-content .content:hover::before{
+    width: 100%;
+}
+.education-content .content .year{
+    font-size: 1.5rem;
+    color: #00abf0;
+    padding-bottom: .5rem;
+}
+.education-content .content .year i{
+    padding-right: .5rem;
+}
+.education-content .content h3{
+    font-size: 2rem;
+}
+.education-content .content p{
+    font-size: 1.6rem;
+    padding-top: .5rem;
 }
